# snake-server

./: pyproject.toml
snake/: asyncio_helpers.py  dimension.py  event.py  game.py  key_mapping.py  server.py  some_args.py  thread_wrapper.py  websocket_helpers.py
snake/entities/: __init__.py  client.py  connections.py  matches.py  message_queue_handler.py  room.py  rooms.py  value.py
snake/scripts/: launcher.py
tests/: test_axis_calculator.py
